[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "1.0"

[dev-dependencies]
termion = "*"