[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "1.5"

[dev-dependencies]
termion = "*"
